[metadata]
name='snmp-manager'
url='https://github.com/agn-7/snmp-manager'
author='agn-7'
author_email='benyaminjmf@gmail.com'
license='MIT'
description-file = README.rst
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
