[metadata]
name = snmp-manager
url = https://github.com/agn-7/snmp-manager
author = agn-7
author_email = benyaminjmf@gmail.com
license = MIT
description-file = README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
install_requires =
    pyserial>=3
    easydict>=1
    pysnmp>=4
    async-timeout>=3
keywords =
        snmp
        snmp-collector
        snmp-manager
        asyncio
        python3
        python
        docker
        docker-compose
description = SNMP collector through an asyncio loop


[options]
python_requires = >=3.6
